feat: bp-dto 모듈에 java-test-fixtures 플러그인 적용